# MCLPaper

./: .gitignore  README.md  SESSION_CONTEXT.md  combine_condition_rmse_timeseries.py  compute_rmse.py  dynamics.py  main.py  motion_model.py  plot_collision_aligned_rmse.py  pyproject.toml  raycast_sensor.py  resample_particles.py  research_aggressive_benchmark.py  run_adaptive_noise_study.py  state_utils.py
jax_benchmark/: jax_research_benchmark.py
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/: run_manifest.csv  sensitivity_stage1_ranked_rows.csv  sensitivity_topk_configs.csv  wilcoxon_results.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/ablation/aggressive_suite_20260227_181408/: summary.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/ablation/aggressive_suite_20260227_181408/no_collision/baseline/: metrics.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/ablation/aggressive_suite_20260227_181408/no_collision/noise_alpha_jerk/: metrics.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/ablation/aggressive_suite_20260227_181408/no_collision/noise_alpha_only/: config.txt  (+1 more)
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/regular/aggressive_suite_20260227_181151/: summary.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/sensitivity/aggressive_suite_20260227_182049/: summary.csv
research_runs_jax_pipeline/adaptive_noise_pipeline_20260227_181150/sensitivity_explore/aggressive_suite_20260227_181730/: summary.csv
(+162 files in other folders)
