[project]
name = "mclpaper"
version = "0.1.0"
description = "2D Monte Carlo Localization baseline for benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "rich>=13.7",
  "cupy-cuda12x>=14.0.1",
  "jax[cuda12]>=0.6.2",
]

[tool.uv]
package = false

